# wtfpulse

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  default.nix  flake.nix
.github/workflows/: release.yml
docs/: api-modes.md  architecture.md  commands.md  contributing.md  development.md  whatpulseAPI.md
src/: client.rs  config.rs  db.rs  key_mapping.rs  main.rs
src/commands/: applications.rs  calorimetry.rs  computers.rs  mod.rs  monitor.rs  network.rs  pulses.rs  raw.rs  settings.rs  tui.rs  uptime.rs  user.rs
src/commands/heatmap/: layouts.rs  mod.rs
src/commands/keyboard/: layouts.rs  mod.rs
src/commands/mouse/: mod.rs  widget.rs
src/commands/scroll_tower/: landmarks.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  period_utils.rs  state.rs  table_utils.rs  tabs.rs  ui.rs
