[package]
name = "wtfpulse"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "wtfpulse"

[dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
base64 = "0.22.1"
uom = "0.37.0"
ratatui = "0.30.0"
crossterm = "0.29.0"
log = "0.4.29"
simplelog = "0.12.2"
inventory = "0.3.21"
chrono = "0.4.42"
dotenv = "0.15.0"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.31"
url = "2.5.7"
strum = { version = "0.27.2", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }

